--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -1,6 +1,6 @@
-<%- include ('../public/partials/header.ejs') %>
+<%- include ('partials/header.ejs') %>
 <body>
-    <%- include ('../public/partials/navbar.ejs') %>
+    <%- include ('partials/navbar.ejs') %>
     <div class="container">
         <div class="card" id="formulario-pergunta">
             <div class="card-header">
@@ -8,12 +8,12 @@
             </div>
 
             <div class="card-body">
-                <form method="post" action="/salvarpergunta"></form>
+                <form method="post" action="/salvarpergunta">
                     <label> Título </label>
-                    <input type="text" placeholder="Título" class="form-control">
+                    <input type="text" placeholder="Título" class="form-control" name="titulo">
                     <br>
                     <label> Descrição </label>
-                    <textarea placeholder="Descreva a sua pergunta aqui" class="form-control"></textarea>
+                    <textarea placeholder="Descreva a sua pergunta aqui" class="form-control" name="descricao"></textarea>
                     <br>
                     <button class="btn btn-success" type="submit">Perguntar</button>
                 </form>
@@ -21,4 +21,4 @@
         </div>
     </div>
 </body>
-<%- include ('../public/partials/footer.ejs') %>
+<%- include ('partials/footer.ejs') %>
