arquivos parciais corrigidos e estilizados

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,20 @@
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="/">
-        <img src="../imgs/icons8-search-64.png">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #332d46;">
+    <a class="navbar-brand" href="/perguntar">
+        <img src="../imgs/icons8-search-64.png" width="35" height="35" class="d-inline-block align-top" alt="">
     </a>
+    <div class="container-fluid" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-item nav-link active" href="/">Início</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Listar Perguntas</a>
+          </li>
+        </ul>
+      </div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Entrar</a>
+          </li>
+      </ul>
 </nav>
