--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -6,9 +6,8 @@
             <div class="card-header">
                 <h3> Realizar perguntas </h3>
             </div>
-
             <div class="card-body">
-                <form method="post" action="/salvarpergunta">
+                <form method="post" action="/pergunta/salvar">
                     <label> Título </label>
                     <input type="text" placeholder="Título" class="form-control" name="titulo">
                     <br>
