--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,16 @@
-<!-- Inserir aqui quaisquer scripts de importação (baixados online ou linkados localmente) -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-<script src="/js/bootstrap.min.js"></script>
+<footer class="footer mt-auto py-3 bg-dark">
+  <div class="container mx-4">
+      <div class="row">
+          <div class="col-md-6">
+              <span class="text-muted d-block ">&copy; 2024 Guia de Perguntas.</span>
+              <span class="text-muted d-block ">Todos os direitos reservados.</span>
+          </div>
+      </div>
+  </div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="/javascripts/main.js"></script>
+</body>
 </html>
