--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,3 +7,4 @@
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/style.css">
     </head>
+    <body class="d-flex flex-column min-vh-100">
