--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,20 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #332d46;">
-    <a class="navbar-brand" href="/perguntar">
-        <img src="../imgs/icons8-search-64.png" width="35" height="35" class="d-inline-block align-top" alt="">
-    </a>
-    <div class="container-fluid" id="navbarNav">
-        <ul class="navbar-nav">
+<nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #332d46;">
+  <a class="navbar-brand mx-4" href="/perguntar">
+      <img src="/imgs/icons8-search-64.png" width="35" height="35" class="d-inline-block align-top" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse container-fluid mx-4" id="navbarNav">
+      <ul class="navbar-nav mr-auto gap-3">
           <li class="nav-item">
-            <a class="nav-item nav-link active" href="/">Início</a>
+              <a class="nav-item nav-link active" href="/">Início</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Listar Perguntas</a>
-          </li>
-        </ul>
-      </div>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="#">Entrar</a>
+              <a class="nav-link disabled" href="#">Listar Perguntas</a>
           </li>
       </ul>
+      <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link" href="#">Entrar</a>
+          </li>
+      </ul>
+  </div>
 </nav>
