--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,23 +1,35 @@
-<nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #332d46;">
-  <a class="navbar-brand mx-4" href="/perguntar">
-      <img src="/imgs/icons8-search-64.png" width="35" height="35" class="d-inline-block align-top" alt="">
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse container-fluid mx-4" id="navbarNav">
-      <ul class="navbar-nav mr-auto gap-3">
-          <li class="nav-item">
-              <a class="nav-item nav-link active" href="/">Início</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link disabled" href="#">Listar Perguntas</a>
-          </li>
-      </ul>
-      <ul class="navbar-nav">
-          <li class="nav-item">
-              <a class="nav-link" href="#">Entrar</a>
-          </li>
-      </ul>
-  </div>
-</nav>
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #332d46;">
+    <a class="navbar-brand mx-4" href="/perguntar">
+        <img src="/imgs/icons8-search-64.png" width="35" height="35" class="d-inline-block align-top" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse container-fluid mx-4" id="navbarNav">
+        <ul class="navbar-nav mr-auto gap-3">
+            <li class="nav-item">
+                <a class="nav-item nav-link active" href="/">Início</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/pergunta/listar">Listar Perguntas</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto align-items-center">
+            <% if (usuario) { 
+                const primeiroNome = usuario.nome.split(' ')[0];
+            %>
+                <li class="nav-item">
+                    <span class="navbar-text text-white ">Bem-vindo, <%= primeiroNome %>!</span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/usuario/logout">Sair</a>
+                </li>
+            <% } else { %>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/usuario/login">Entrar</a>
+                </li>
+            <% } %>
+        </ul>
+    </div>
+  </nav>
+  
