style: adicionado link para cadastro

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -32,6 +32,7 @@
             <% } else { %>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/usuario/login">Entrar</a>
+                    <a class="nav-link text-white" href="/usuario/registrar">Cadastrar</a>
                 </li>
             <% } %>
         </ul>
