--- a/views/listarPerguntas.ejs
+++ b/views/listarPerguntas.ejs
@@ -22,7 +22,7 @@
       <div class="col-md-3">
         <div class="form-group">
           <label for="usuario">Usuário</label>
-          <input type="text" class="form-control" id="usuario" name="usuario" placeholder="Buscar por usuário" value="<%= usuario %>">
+          <input type="text" class="form-control" id="usuario" name="usuario" placeholder="Buscar por usuário" value="<%= usuario.value %>">
         </div>
       </div>
       <div class="col-md-3">
